Imported rospy. Fsmcontroller now runs correctly in rosrun using the testdata in TS2. changed fsm/src to fsm/scripts to reflect the content better. Added fsm python files as installs in fsm/package.xml.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /expbot/build/*
 /expbot/devel/*
+/expbot/src/fsm/scripts/*.pyc
+/expbot/src/fsm/scripts/__pycache__/*
+/expbot/src/fsm/scripts/stateScripts/*.pyc
+/expbot/src/fsm/scripts/stateScripts/__pycache__/*
+/tests/testworkspace/*
