--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-/expbot/build/*
-/expbot/devel/*
-/expbot/src/fsm/scripts/*.pyc
-/expbot/src/fsm/scripts/__pycache__/*
-/expbot/src/fsm/scripts/stateScripts/*.pyc
-/expbot/src/fsm/scripts/stateScripts/__pycache__/*
+# Ignore all build and devel catkin generated directories
+build/
+devel/
+
+# Ignore python bytecode files
+*.pyc
+
+# Igore __pycache__ directories
+__pycache__/
+
+# Ignore this test workspace
 /tests/testworkspace/*
