Created test_talker package. test_talker starts a node that pushes a data from a testfile through a set of publishers. This simulates the fsm interacting with a set of sensor controller nodes. test_talker only publishes as std_msgs.msg.String and cannot currently do the asynchronous publishing that may happen in a complete system.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ __pycache__/
 
 # Ignore this test workspace
 /tests/testworkspace/*
+
+# Ignore untracked_documents directory
+untracked_documents/
